Updated favicon and title

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-  <title>Page title</title>
+  <title>Nick Magee | Software Engineer </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="css/tailwind/tailwind.min.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="shuffle-for-tailwind.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
   <script src="js/main.js"></script>
 </head>
 
