--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,7 +15,7 @@
   <div class="">
 
     <section class="relative pb-8 overflow-y-hidden"><img
-        class="hidden lg:block absolute top-0 left-0 bottom-0 w-2/5 object-cover" src="images/p5.jpg" alt="">
+        class="hidden lg:block absolute top-0 left-0 bottom-0 w-2/5 object-cover" src="images/p7.jpg" alt="">
       <div class="relative container px-4 mx-auto">
         <nav class="flex justify-between items-center py-8"><a
             class="hidden lg:inline-block text-sky-600 text-2xl leading-none" href="#">
@@ -161,7 +161,7 @@
             </div>
           </div>
           <div class="w-full lg:w-1/2 px-4">
-            <img class="rounded-lg w-full object-cover" src="images/kayu.JPG" alt="">
+            <img class="rounded-lg w-full object-cover" src="images/kayu-min.JPG" alt="">
           </div>
         </div>
       </div>
