added more links

--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,9 @@
               time, on budget, with quality.</p>
             <div>
               <a class="block md:inline-block px-5 py-3 md:mr-3 mb-3 md:mb-0 text-sm text-center bg-sky-500 hover:bg-sky-600 text-white font-semibold border border-sky-500 hover:border-sky-600 rounded transition duration-200"
-                href="#">View Projects</a><a
+                href="#projects">View Projects</a><a
                 class="block md:inline-block px-5 py-3 text-sm text-center font-semibold text-sky-500 hover:text-white hover:bg-sky-500 border border-sky-500 hover:border-sky-600 rounded transition duration-200"
-                href="#">Contact Me</a>
+                href="#contact">Contact Me</a>
             </div>
           </div>
           <div class="flex flex-wrap items-center justify-center -mx-2">
@@ -87,13 +87,13 @@
           <div>
             <ul>
               <li class="mb-1"><a class="block p-4 text-sm font-semibold hover:bg-sky-50 hover:text-sky-500 rounded"
-                  href="#">About</a></li>
+                  href="#about_me">About</a></li>
               <li class="mb-1"><a class="block p-4 text-sm font-semibold hover:bg-sky-50 hover:text-sky-500 rounded"
-                  href="#">Projects</a></li>
+                  href="#projects">Projects</a></li>
               <li class="mb-1"><a class="block p-4 text-sm font-semibold hover:bg-sky-50 hover:text-sky-500 rounded"
-                  href="#">Technologies</a></li>
+                  href="#tech">Technologies</a></li>
               <li class="mb-1"><a class="block p-4 text-sm font-semibold hover:bg-sky-50 hover:text-sky-500 rounded"
-                  href="#">Contact Me</a></li>
+                  href="#contact">Contact Me</a></li>
             </ul>
           </div>
           <div class="mt-auto">
@@ -123,8 +123,7 @@
                   </svg>
                 </div>
                 <div class="max-w-sm">
-                  <h3 class="mb-2 -mt-1 text-xl md:text-2xl font-bold font-heading">Emphasis on the right technology
-                    stack</h3>
+                  <h3 class="mb-2 -mt-1 text-xl md:text-2xl font-bold font-heading">Right tool for the right job</h3>
                   <p class="text-sky-500 leading-loose">Over-engineering a software can make a schedule get out of hand
                     fast.  I take pride in finding the right technologies and integrating them in a way to scale with
                     the user base.</p>
@@ -139,7 +138,7 @@
                   </svg>
                 </div>
                 <div class="max-w-sm">
-                  <h3 class="mb-2 -mt-1 text-xl md:text-2xl font-bold font-heading">Making software for tomorrow</h3>
+                  <h3 class="mb-2 -mt-1 text-xl md:text-2xl font-bold font-heading">Forward looking</h3>
                   <p class="text-sky-500 leading-loose">Engineering a project such that the software is years ahead of
                     the industry instead of falling behind is an aspect of my work I maintain.</p>
                 </div>
@@ -153,7 +152,7 @@
                   </svg>
                 </div>
                 <div class="max-w-sm">
-                  <h3 class="mb-2 -mt-1 text-xl md:text-2xl font-bold font-heading">Willing to adapt</h3>
+                  <h3 class="mb-2 -mt-1 text-xl md:text-2xl font-bold font-heading">Adaptable</h3>
                   <p class="text-sky-500 leading-loose">Making software I am passionate about is what motivates me, and
                     that means finding new and interesting ways to adapt to the product needed.</p>
                 </div>
